--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 15rem;
+  margin-top: 10rem;
 }
 
  .content_title{
@@ -176,4 +176,9 @@ a:focus{
     font-size: 40px;
   }
 
+}
+
+.video-container{
+  text-align: center;
+  align-items: center;
 }
