Updated buttons and instructions

--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,8 @@ body{
   font-size: 16px;
   border-radius: 5px;
   margin-bottom: 10px;
+  color: #000000;
+  font-weight: 600;
 }
 
 .form .form_button{
@@ -150,6 +152,7 @@ a:link{
   color: black;
   font-weight: 700;
   font-size: 15px;
+  text-decoration: none;
 }
 a:visited{
   color: black;
@@ -157,12 +160,12 @@ a:visited{
   font-size: 15px;
 }
 a:hover{
-  color: red;
+  color: rgb(255, 253, 253);
   font-weight: 700;
   font-size: 16px;
 }
 a:focus{
-  color:red;
+  color:rgb(255, 255, 255);
   font-size: 15px;
 }
 
@@ -181,4 +184,66 @@ a:focus{
 .video-container{
   text-align: center;
   align-items: center;
+}
+
+.button-3 {
+  appearance: none;
+  background-color: #2ea44f;
+  border: 1px solid rgba(27, 31, 35, .15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 6px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+  margin: 5px;
+}
+
+.button-3:focus:not(:focus-visible):not(.focus-visible) {
+  box-shadow: none;
+  outline: none;
+}
+
+.button-3:hover {
+  background-color: #2c974b;
+}
+
+.button-3:focus {
+  box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+  outline: none;
+}
+
+.button-3:disabled {
+  background-color: #94d3a2;
+  border-color: rgba(27, 31, 35, .1);
+  color: rgba(255, 255, 255, .8);
+  cursor: default;
+}
+
+.button-3:active {
+  background-color: #298e46;
+  box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+}
+
+.youtube-video-title{
+  color: #000000;
+  font-weight: 600;
+  text-shadow: #000000;
+}
+
+.instructions{
+  text-align: center;
 }
